--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port = 8888
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/pizza_hub
 spring.datasource.username=mysql
 spring.datasource.password=mysql
@@ -8,3 +8,5 @@ spring.jpa.hibernate.format.format-sql=true
 
 #netstat -ao |find /i "listening"
 #Taskkill /F /IM 12704
+
+upload.path = D:\/university\/Java\/pizzahb\/src\/main\/resources\/templates\/pattern\/img\/
